--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </ul>
             </div>
         </div>
-        <script src="Script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
